# delivery-escrow-system

./: README.md  go.mod
backend/api/v1/: multiplexer.go
backend/auth/: login.go
backend/blockchain/: contract_client.go
backend/cmd/: main.go
backend/handlers/: auth_handler.go  cart_handler.go  checkout_handler.go  debug_handler.go  home_handler.go  product_handler.go  seller_handler.go  template_helper.go
backend/internal/: auth_handler.go  cart_handler.go  checkout_handler.go  home_handler.go  product_handler.go  seller_handler.go  template_helper.go
backend/internal/handlers/buyer/: buyer_registration.go
backend/internal/models/buyer/: buyer.go
backend/middleware/: enable_cors.go
backend/multiplexer/: multiplexer.go
backend/static/css/: styles.css
backend/templates/: buyer_dashboard.html  buyer_registration_form.html  cart.html  checkout.html  checkout_cart.html  checkout_confirmation.html  home.html  login.html  product.html  seller_dashboard.html  seller_registration_form.html  test_cart.html  transporter_registration_form.html
delivery-escrow-contract/: Cargo.toml  lib.rs
descrow-frontend/: index.html  package-lock.json  package.json  tsconfig.json
descrow-frontend/src/: App.jsx  App.tsx  ConnectWallet.tsx  constants.ts  main.jsx  main.tsx  wagmi.config.ts
descrow-frontend/src/components/: Login.css  Login.jsx  NavBar.css  NavBar.jsx  SearchBar.jsx
docs/: ethereum-to-polkadot-bridge.md
frontend/descrow_frontend/: package-lock.json  package.json
frontend/descrow_frontend/src/: App.tsx
(+3 files in other folders)
