[package]
name = "delivery_escrow"
version = "0.1.0"
authors = ["Elijah Gathanga <elyg3672@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }


[dev-dependencies]
ink_e2e = { version = "5", default-features = false, features = ["std"] }

[lib]
path = "lib.rs"

[features]
default = []
ink-as-dependency = []
std = [
    "ink/std",
    "parity-scale-codec/std"
]

e2e-tests = []
